tests/NormalTests/paczka1/fuzzy1/70376809.err
Error in line 2: HzcDYI5axc S380 24,0
Error in line 1: MXu33 S526 7,8
Error in line 12: Lv9vh A909 69,0
Error in line 17: rUxczLTWl S526 35,5
Error in line 25: 6UTlz S380 6,7
Error in line 26: rUxczLTWl S380 7,4
Error in line 29: 6UTlz S526 83,3
Error in line 32: 6UTlz A909 66,9
Error in line 39: Lv9vh A909 47,0
